Resharding oplog fetcher should not write reshardProgressMark no-op to buffer if timestamp is minFetchTimestamp

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc14
    • Affects Version/s: None
    • Component/s: None
    • None
    • Cluster Scalability
    • Fully Compatible
    • ALL
    • v8.0
    • Cluster Scalability 2024-07-08, Cluster Scalability 2024-07-22
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Doing so can result in a bug where the no-op entry never gets applied by the resharding oplog applier because it only applies entries in the buffer with a timestamp > minFetchTimestamp. This can then cause the estimated oplog application time to be high and prevent resharding from entering the critical section. See: BF-33742 for more information. 

            Assignee:
            Wenqin Ye
            Reporter:
            Wenqin Ye
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: