SERVER-92113 Resharding oplog fetcher should not write reshardProgressMark no-op to buffer if timestamp is minFetchTimestamp (#24436)

GitOrigin-RevId: 98d67661e9a144651d1374a41e1a7bf0e16fdacb